--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!--Main style sheet-->
-<link href="style.css" rel=stylesheet">                                     
+<link href="/style.css" rel="stylesheet">                                     
 <div class="warning-content">
 <h1>NEW SITE UNDER CONSTRUCTION</h1>
 <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
