--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <!--Main style sheet-->
-<link href="/style.css" rel="stylesheet">                                     
+<link href="/style.css" rel="stylesheet">     
+
+
 <div class="warning-content">
 <h1>NEW SITE UNDER CONSTRUCTION</h1>
 <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
@@ -59,5 +61,10 @@
 <p>
   It's okay, we're excited too!
 </p>
+
+<h1>  
+<a href="mailto:admin@cherryjubilee.co.kr">Question?
+</a>
+  </h1>
 
 </div>
