--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
-<!--Main style sheet-->
+<head>
 <link href="/style.css" rel="stylesheet">     
+</head>
 
-
+<!--Main style sheet-->
 <div class="warning-content">
 <h1>NEW SITE UNDER CONSTRUCTION</h1>
 <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
@@ -61,10 +62,8 @@
 <p>
   It's okay, we're excited too!
 </p>
-
-<h1>  
-<a href="mailto:admin@cherryjubilee.co.kr">Question?
-</a>
-  </h1>
-
+<p>
+ admin@cherryjubilee.co.kr
+</p>
 </div>
+  
